2007-04-10  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-snippets-feature.el (rails-snippets-feature:list): updated

	* rails-test.el (rails-test:error-regexp-alist): updated

2007-04-09  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-ui.el (rails-minor-mode-prefix-key): created
	(rails-key): created

	* predictive-prog-mode.el (predictive-prog-text-faces): fixed compilation warning 

2007-04-08  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-speedbar-feature.el (rails-speedbar:roots): created

2007-04-06  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-lib.el (capital-word-p): better word comparsion

	* predictive-prog-mode.el, untabify-file.el: created separate minor-mode
 
	* rails-compat.el: removed predictive-prog-mode declaration
 
	* rails-features.el: created

	* rails-predictive-prog-mode-feature.el: created and place into it
	predictive-program-mode

	* rails-snippets-feature.el: created

	* rails-ui.el (rails-minor-mode-map): removed snippets menu

	* rails-untabify-feature.el: created and place into it untabify
	hook

	* rails.el (find-file-hooks): cleanup

2007-04-05  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails.el (auto-mode-alist): added Rakefile to auto-mode-alist

	* rails-ui.el (rails-minor-mode-test-current-method-key): created

	* rails-*-test-minor-mode (rails-unit-test-minor-mode rails-functional-test-minor-mode): 
	changed hotkey "C-c ." to "C-c C-c ,", the old conflicted with ECB

	* rails-ruby.el (flymake-ruby-load): apply flymake-mode only if
	buffer-file-name matched flymake-allowed-file-name-masks

2007-04-04  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-ruby.el (flymake-ruby-load): updated

	* rails-ui.el: reduced the menu length

2007-04-03  Dmitry Galinsky  <dima.exe@gmail.com>

	* rails-ruby.el (flymake-ruby-load): updated

	* rails-controller-layout.el (rails-controller-layout:keymap):
	created menu group for current minor-mode

	* rails-model-layout.el (rails-model-layout:keymap): created menu